--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <body>
  <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="index.js" type="text/javascript"></script>  
+    <script src="js/index.js" type="text/javascript"></script>  
  <div class=container>
  <div class="text">
  <h1>Books</h1>
@@ -23,7 +23,7 @@
   <div class="container"></div>
     <div class="row">
       <div class="col-md-6">
-        <p><img src="The Shining.png" alt="The Shining" max-width: 100%; height: auto; display: block;class="img-rounded"></p>
+        <p><img src="img/The Shining.png" alt="The Shining" max-width: 100%; height: auto; display: block;class="img-rounded"></p>
         <h2>The Shining</h2>
         <p class="span6">
           Jack Torrance's new job at the Overlook Hotel is the perfect chance for
@@ -39,7 +39,7 @@
       </div>
       <div class="col-md-6">
 	  
-        <p><img src="Dracula.png"  alt="Dracula"class="img-rounded"></p>
+        <p><img src="img/Dracula.png"  alt="Dracula"class="img-rounded"></p>
         <h2>Dracula </h2>
         <p class="span6">
           A rich selection of background and source materials is provided in three areas:
