--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 
     <h1><font>CARS</font></h1>
 <div class="center">
-        <div id="first" class="container">
+        <div id="first" class="row">
         </div>
-</div>
+      </div>
+
     <script src="js/index.js" type="text/javascript"></script>
 </body>
 
