--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 <div class="container">
     <h1><font>CARS</font></h1>
 <div class="center">
-        <div id="first" class="row">
+        <div id="cars-list" data-id="obj" class="row">
         </div>
       </div>
 </div>
+<script src="js/index.js" type="text/javascript"></script>
 <!-- Modal -->
 <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
-    <div class="modal-content">
+    <div class="modal-content" id="modalContent">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Car models</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -41,7 +42,6 @@
     </div>
   </div>
 </div>
-    <script src="js/index.js" type="text/javascript"></script>
 </body>
 
 </html>
