--- a/index.html
+++ b/index.html
@@ -19,29 +19,31 @@
 <div class="container">
     <h1><font>CARS</font></h1>
 <div class="center">
-        <div id="cars-list" data-id="obj" class="row">
+        <div id="cars-list" class="row">
         </div>
       </div>
 </div>
-<script src="js/index.js" type="text/javascript"></script>
+
 <!-- Modal -->
 <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
-    <div class="modal-content" id="modalContent">
+    <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Car models</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body" id="modalContent">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
 </div>
+<script src="js/index.js" type="text/javascript"></script>
 </body>
 
 </html>
